# ai-image

./: .gitignore  Cleanup-Unused-Models.bat  Install-SageAttention.bat  Install-TeaCache.bat  Install.bat  Launch.bat  README.md  Update.bat  pyproject.toml  requirements-comfyui.txt
comfyui_app/: app.py  batch.py  comfy_client.py  generation.py  installer.py  model_manager.py  model_resolver.py  prune_models.py  ui_utils.py  video_frames.py  vram.py  workflow_builder.py
comfyui_app/workflows/: flux2_klein_edit.json  flux2_klein_t2i.json
tests/: test_comfyui_resolver.py  test_model_manager.py  test_speedups.py  test_upscale_and_media.py
