[project]
name = "ai-image-comfyui"
version = "0.1.0"
description = "ComfyUI-based FLUX.2 Klein local image app"
requires-python = ">=3.10"
dependencies = [
    "requests",
    "websocket-client",
    "opencv-python-headless",
    "imageio",
    "pillow",
    "gradio",
    "huggingface-hub[hf_xet]",
]

[tool.uv]
dev-dependencies = []
